# MusicProvider

./: .gitignore  .mcp.json  README.md  debug-playwright.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
.agents/: AGENTS.md
.atl/: .skill-registry.cache.json  skill-registry.md
.commandcode/commands/: sdd-apply.md  sdd-design.md  sdd-verify.md
.commandcode/taste/: taste.md
.openspecs/: config.json
.openspecs/e2e-web-playwright/: README.md
Spoti5_app/: README.md  pubspec.yaml
Spoti5_app/integration_test/: app_test.dart
Spoti5_app/lib/: main.dart
Spoti5_app/linux/: CMakeLists.txt
Spoti5_app/macos/: Podfile
Spoti5_app/rust/ytdlp_native/: Cargo.toml  build.rs  pubspec.yaml
Spoti5_app/rust/ytdlp_native/.cargo/: config.toml
Spoti5_app/rust/ytdlp_native/ios/: rust_lib_ytdlp_native.podspec
Spoti5_app/rust/ytdlp_native/ios/Classes/: RustLibYtdlpNativePlugin.swift
Spoti5_app/rust/ytdlp_native/macos/: rust_lib_ytdlp_native.podspec
Spoti5_app/rust/ytdlp_native/macos/Classes/: RustLibYtdlpNativePlugin.swift
Spoti5_app/rust/ytdlp_native/src/: api.rs  frb_generated.rs  lib.rs  ndjson_parser.rs  ytdlp.rs  ytdlp_setup.rs
docs/: architecture_mapping.md  contexto_y_estado.md  dependency_analysis.md  ejecucion_android_emulador.md  gitflow.md  implementacion_y_pruebas_spoti5.md  integration_guide.md  platform-channels-ytdlp.md  pruebas_e2e_multiplataforma.md  pruebas_e2e_playwright_flutter_web.md  setup_y_arquitectura.md
src/: cli.ts  server.ts  ytdlpSetup.ts  ytdlpWrapper.ts
tests/: ytdlpSetup.test.ts  ytdlpWrapper.test.ts
(+48 files in other folders)
